--- a/en/home.mdx
+++ b/en/home.mdx
@@ -1,141 +1,9 @@
 ---
 title: "SQD Developer Platform"
 description: "Power your products with unparalleled real-time, blockchain indexing and Q&A capabilities."
-mode: "custom"
 ---
 
-export default function Home() {
-  const [isClient, setIsClient] = useState(false);
-  const [activeTab, setActiveTab] = useState('curl');
-  const [activeVM, setActiveVM] = useState('evm');
-  const [networksData, setNetworksData] = useState(null);
-  const [loading, setLoading] = useState(false);
-  const [error, setError] = useState(null);
-
-useEffect(() => {
-setIsClient(true);
-}, []);
-
-useEffect(() => {
-// Load networks data
-if (isClient) {
-  const loadNetworks = async () => {
-    try {
-      setLoading(true);
-      setError(null);
-
-      // Use mock data for now since API might have CORS issues
-      const mockData = {
-        'ethereum-mainnet': { name: 'Ethereum', kind: 'evm', usage_bytes: 2100000000000, last_updated_at: new Date().toISOString() },
-        'polygon-mainnet': { name: 'Polygon', kind: 'evm', usage_bytes: 1800000000000, last_updated_at: new Date().toISOString() },
-        'arbitrum-one': { name: 'Arbitrum One', kind: 'evm', usage_bytes: 1200000000000, last_updated_at: new Date().toISOString() },
-        'optimism-mainnet': { name: 'Optimism', kind: 'evm', usage_bytes: 900000000000, last_updated_at: new Date().toISOString() },
-        'bsc-mainnet': { name: 'BNB Chain', kind: 'evm', usage_bytes: 1500000000000, last_updated_at: new Date().toISOString() },
-        'avalanche-mainnet': { name: 'Avalanche', kind: 'evm', usage_bytes: 700000000000, last_updated_at: new Date().toISOString() },
-        'base-mainnet': { name: 'Base', kind: 'evm', usage_bytes: 600000000000, last_updated_at: new Date().toISOString() },
-        'fantom-mainnet': { name: 'Fantom', kind: 'evm', usage_bytes: 400000000000, last_updated_at: new Date().toISOString() },
-        'polkadot': { name: 'Polkadot', kind: 'substrate', usage_bytes: 500000000000, last_updated_at: new Date().toISOString() },
-        'kusama': { name: 'Kusama', kind: 'substrate', usage_bytes: 300000000000, last_updated_at: new Date().toISOString() },
-        'acala': { name: 'Acala', kind: 'substrate', usage_bytes: 200000000000, last_updated_at: new Date().toISOString() },
-        'moonbeam': { name: 'Moonbeam', kind: 'substrate', usage_bytes: 250000000000, last_updated_at: new Date().toISOString() },
-        'solana-mainnet': { name: 'Solana', kind: 'solana', usage_bytes: 800000000000, last_updated_at: new Date().toISOString() },
-        'fuel-mainnet': { name: 'Fuel', kind: 'fuel', usage_bytes: 100000000000, last_updated_at: new Date().toISOString() },
-        'tron-mainnet': { name: 'Tron', kind: 'tron', usage_bytes: 350000000000, last_updated_at: new Date().toISOString() },
-        'starknet-mainnet': { name: 'Starknet', kind: 'starknet', usage_bytes: 150000000000, last_updated_at: new Date().toISOString() }
-      };
-
-      const byVM = {};
-      const vmCounts = {};
-
-      Object.entries(mockData).forEach(([slug, network]) => {
-        if (network && network.kind) {
-          const vm = network.kind.toLowerCase();
-          if (!byVM[vm]) {
-            byVM[vm] = [];
-            vmCounts[vm] = 0;
-          }
-          byVM[vm].push([slug, network]);
-          vmCounts[vm]++;
-        }
-      });
-
-      // Sort networks by usage
-      Object.keys(byVM).forEach(vm => {
-        byVM[vm].sort((a, b) => {
-          const usageA = a[1]?.usage_bytes || 0;
-          const usageB = b[1]?.usage_bytes || 0;
-          return usageB - usageA;
-        });
-      });
-
-      const total = Object.values(vmCounts).reduce((sum, count) => sum + count, 0);
-
-      setNetworksData({ byVM, vmCounts, total });
-      setLoading(false);
-
-    } catch (err) {
-      console.error('Error loading networks:', err);
-      setError('Failed to load networks');
-      setLoading(false);
-    }
-  };
-
-  loadNetworks();
-}
-}, [isClient]);
-
-useEffect(() => {
-// Inject modern CSS
-if (typeof document !== 'undefined') {
-const style = document.createElement('style');
-style.textContent = `
-.hero-container {
-max-width: 1200px;
-margin: 0 auto;
-padding: 40px 24px;
-}
-
-.hero-header {
-display: flex;
-justify-content: space-between;
-align-items: center;
-margin-bottom: 60px;
-}
-
-.hero-title {
-font-size: 32px;
-font-weight: 700;
-color: var(--text-primary);
-margin: 0;
-}
-
-.hero-subtitle {
-font-size: 16px;
-color: var(--text-secondary);
-margin: 8px 0 0 0;
-max-width: 500px;
-}
-
-.quickstart-section {
-display: flex;
-align-items: center;
-justify-content: space-between;
-background: var(--background-secondary);
-border: 1px solid var(--border-primary);
-border-radius: 12px;
-padding: 24px;
-margin-bottom: 40px;
-}
-
-.quickstart-content {
-flex: 1;
-}
-
-.quickstart-title {
-font-size: 20px;
-font-weight: 600;
-color: var(--text-primary);
-margin: 0 0 8px 0;
+<HomePage />
 display: flex;
 align-items: center;
 gap: 12px;
