--- a/snippets/hero-section.mdx
+++ b/snippets/hero-section.mdx
@@ -1,63 +1,89 @@
 export const HeroSection = () => {
   return (
     <div style={{
-      background: 'linear-gradient(135deg, #667eea 0%, #764ba2 100%)',
-      borderRadius: '16px',
-      padding: '48px 32px',
-      marginBottom: '48px',
-      color: 'white',
-      textAlign: 'center'
+      display: 'flex',
+      alignItems: 'center',
+      justifyContent: 'space-between',
+      padding: '48px 0',
+      marginBottom: '24px'
     }}>
-      <div style={{
-        maxWidth: '800px',
-        margin: '0 auto'
-      }}>
+      <div style={{ flex: 1, maxWidth: '600px' }}>
         <h1 style={{
           fontSize: '48px',
-          fontWeight: '800',
+          fontWeight: '700',
           marginBottom: '16px',
-          lineHeight: '1.1'
+          lineHeight: '1.1',
+          color: 'var(--text-primary)'
         }}>
           SQD Developer Platform
         </h1>
         <p style={{
-          fontSize: '20px',
-          marginBottom: '32px',
-          opacity: '0.9'
+          fontSize: '18px',
+          marginBottom: '0',
+          color: 'var(--text-secondary)',
+          lineHeight: '1.5'
         }}>
-          Power your products with unparalleled real-time blockchain indexing and Q&A capabilities
+          Power your products with unparalleled real-time, web-wide research and Q&A capabilities.
         </p>
+      </div>
+      
+      <div style={{
+        background: 'var(--background-secondary)',
+        border: '1px solid var(--border-primary)',
+        borderRadius: '12px',
+        padding: '24px',
+        minWidth: '320px'
+      }}>
         <div style={{
           display: 'flex',
-          gap: '16px',
-          justifyContent: 'center',
-          flexWrap: 'wrap'
+          alignItems: 'center',
+          gap: '12px',
+          marginBottom: '16px'
         }}>
-          <a href="/sdk/how-to-start" style={{
-            background: 'white',
-            color: '#667eea',
-            padding: '12px 24px',
-            borderRadius: '8px',
-            fontWeight: '600',
-            textDecoration: 'none',
-            display: 'inline-flex',
+          <div style={{
+            width: '24px',
+            height: '24px',
+            borderRadius: '50%',
+            background: 'var(--primary)',
+            display: 'flex',
             alignItems: 'center',
-            gap: '8px'
-          }}>
-            Get Started →
-          </a>
-          <a href="/network/overview" style={{
-            background: 'rgba(255, 255, 255, 0.2)',
+            justifyContent: 'center',
             color: 'white',
-            padding: '12px 24px',
-            borderRadius: '8px',
-            fontWeight: '600',
-            textDecoration: 'none',
-            border: '1px solid rgba(255, 255, 255, 0.3)'
+            fontSize: '12px',
+            fontWeight: '600'
           }}>
-            View Networks
-          </a>
+            ?
+          </div>
+          <h3 style={{
+            fontSize: '18px',
+            fontWeight: '600',
+            margin: '0'
+          }}>
+            Quickstart Guide
+          </h3>
         </div>
+        <p style={{
+          color: 'var(--text-secondary)',
+          fontSize: '14px',
+          marginBottom: '20px',
+          lineHeight: '1.4'
+        }}>
+          Getting started is simple and fast—make your first API call within minutes.
+        </p>
+        <a href="/sdk/how-to-start" style={{
+          display: 'inline-flex',
+          alignItems: 'center',
+          gap: '8px',
+          padding: '10px 20px',
+          background: 'var(--primary)',
+          color: 'white',
+          fontWeight: '600',
+          fontSize: '14px',
+          borderRadius: '6px',
+          textDecoration: 'none'
+        }}>
+          Start Building
+        </a>
       </div>
     </div>
   );
